Written Code/Styles/essential.css
 /*====================
  Bebas Neue Font
  ====================*/

@font-face {
    font-family: 'Bebas Neue';
    src: url('/Fonts/bebasneue_regular-webfont.woff2') format('woff2'),
         url('/Fonts/bebasneue_regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

 /*====================
  General declarations
 =====================*/

  html {
    background-color: #FEEEEE;
  }

  body {
    margin: 0;  padding: 0;

    font-family: "Lato", "Verdana", sans-serif;
    font-weight: 400;
    color: #950000;
  }
  a {
    color: #be0000;
  }

  /*==================
     General Classes
  ===================*/

  .red_box {
    display: block;
    text-align: center;
    width: 300px;
    height: 2em;
    line-height: 2em;
    padding-top: .25em;

    background-color: #be0000;
    color: #feeeee;

    font-family: "Bebas Neue", "Lato", "Verdana", sans-serif;
    font-size: 1.75em;
    font-weight: 400;
    text-decoration: none;
  }

  /*==================
     Specific IDs
  ===================*/

  /* Home Styles */
  #teamquotes p, #mission p {
    font-size: 18px;
  }
  #misvid {
    padding: 2em;
  }
  #misvid, #teamquotes {
    width: 80%;
    margin: 0 auto;
  }
  #misvid tr td {
    text-align: center;
  }
  #vline {
    border-left: 2px solid #be0000;
  }
  #homevideo, #mission {
    padding: 2em;
  }
  #quotes_head {
    margin: 0 auto;
  }
  #teamquotes {
    padding: 0 2em;
  }
  #teamquotes tr td {
    width: 33%;
    text-align: center;
  }
  #teamquotes tr td p {
    padding: .25em;
  }

  /* Robots Styles */

  #robots_vids {
    width: 70%;
    margin: 0 auto;
    font-size: 14px;
    padding: 2em 0;
  }
  #robots_vids tr td h2{
    text-align: center;
    margin: 0 auto;
  }
  #robots_vids tr td p {
    padding: 0 1em;
  }

  /* People Styles */

  #mentors {
    width: 70%;
    margin: 0 auto;
  }
  #mentors td {
    width: 50%;
    height: 180px;
  }
  #mentors img {
    float: left;
    padding: 0 1em 1em 0;
    position: relative;
    top: 10px;
  }
  #mentors p {
    font-size: 14px;
  }

  #sub_tab {
    width: 70%;
    margin: 0 auto;
    padding: 2em 0 0 0;
    margin-bottom: 3em;
  }
  .s_tab {
    border: none;
    outline: none;
    background-color: #950000;
    color: #feeeee;
    font-family: "Bebas Neue", "Lato", "Verdana", sans-serif;
    font-size: 18px;
    float: left;
    display: inline-block;
    min-width: 10%;
    padding: 0.75em 1em;
  }
  .s_tab:hover, button.active{
    background-color: #be0000;
  }
  .tabcont img {
    float: left;
    padding: 1em;
  }
  .tabcont p {
    display: table-cell;
    padding: 1em 1em 0 0;
  }

  /* History Styles */

  /* Resources Styles */
  #resource_frc {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 70%;
    margin: 0 auto;
    padding-top: 2em;
  }
  #resource_frc img {
    padding: 15px;
  }
  #resource_vex {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row-reverse;
    width: 70%;
    margin: 0 auto;
    padding-bottom: 2em;
  }
  #resource_vex img {
    padding: 15px;
  }
  #resource_vex p {
    text-align: right;
  }
  #supp_h2 {
    margin: 0 auto;
  }
  #supp_resources {
    width: 70%;
    margin: 0 auto;
    padding-top: 2em;
  }
  #supp_resources tr td {
    width: 25%;
    text-align: center;
  }

  /* Calendar Styles */
  #calendar {
    margin: 3em auto;
    display: block;
    border: none;
  }

  /* Sponsors Styles */
  /* News Styles */

  #news {
    border: none;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    z-index: -1;
  }

  /* Alumni Styles */

  #alumni {
    padding: 2em 0;
  }
  #alumni p {
    width: 70%;
    margin: 0 auto;
    text-align: center;
    padding-top: 1em;
  }
  #alumni table{
    width: 70%;
    margin: 0 auto;
    padding: 1em;
  }

  /* About Us Styles */

  #ab_us {
    width: 70%;
    margin: 0 auto;
    text-align: justify;
  }
  #tculture {
    width: 70%;
    margin: 0 auto;
  }

  /* Support Us Styles */
  #support {
    width: 60%;
    margin: 3em auto 0;

    text-align: center;
  }
  #support_info {
    display: flex;
    margin: 0 auto;
    justify-content: center;
  }
  #support_info span {
    text-align: center;
    padding: 0 2em;
  }

  /*==================
     Oddball HTML
  ===================*/

  /*==================
     Navbar Styling
  ===================*/

  nav {
    margin: 0;
    max-width: 100%;
  }
  nav ul {
    list-style: none;
    max-width: 100%;
    z-index: 3;
  }
  nav ul li {
    padding: 10px 20px;
    max-width: 100%;
    background-color: #5a1d19;
    cursor: pointer;
  }
  nav ul li a {
    max-width: 100%;
    color: #feeeee;
    text-decoration: none;
    font-family: "Bebas Neue", "Lato", "Verdana", sans-serif;
    font-size: 18px;
  }
  nav ul li:hover {
    background-color: #be0000;
  }
  ul li.active {
    background-color: #be0000;
  }
  .homelink {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 200px;
    height: 150px;
    margin: 0 auto;
    background-color: #BE0000;
    position: relative;
    z-index: 5;
  }
  .top {
    display: flex;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 4;
  }
  .top div {
    width: 50%;
    height: 1.6em;
	  margin: 0 auto;
    font-family: "Bebas Neue", "Lato", "Verdana", sans-serif;
    font-size: 36px;
    background-color: #950000;
  }
  .top div a {
	  color: #feeeee;
	  text-decoration: none;
    position: absolute;
    top: .4em;
  }
  .robots {
    left: 25%;
  }
  .people {
    right: 25%;
  }
  .left {
    position: absolute;
    top: 2.6em;
    right: 57.5%;
  }
  .right {
    position: absolute;
    top: 2.6em;
    left: 54.5%;
  }
  .left li {
    float: left;
  }
  .right li {
    float: right;
  }
  .top .active, .top a:hover {
    text-shadow: 0 0 15px rgb(254,238,238);
  }

  /*==================
    Slideshow Styling
  ===================*/

  #slides{
    position: relative;
  	padding: 0px;
  	margin: 0px;
  	list-style-type: none;
  }
  .slide{
  	position: absolute;
  	left: 0px;
  	top: 0px;
  	width: 100%;
  	opacity: 0;
  	z-index: 1;

  	-webkit-transition: opacity 1.5s;
  	-moz-transition: opacity 1.5s;
  	-o-transition: opacity 1.5s;
  	transition: opacity 1.5s;
  }
  .slide img {
    width: 100%;
    height: auto;
  }
  .showing{
  	opacity: 1;
  	z-index: 2;
  }

  #slideshow {
    margin-top: 2em;
    position: relative;
    max-width: 100%;
    max-height: 1100px;
  }
  .sldprv, .sldnxt {
    display: inline-flex;
    background-color: #feeeee;
    color: black;
    height: 40px;
    width: 40px;
    justify-content: center;
    align-items: center;
    border-radius: 100%;
    opacity: 0.3;
    z-index: 3;
  }
  .sldprv {
    position: absolute;
    top: 50%;
    left: 1em;
    transform: translateY(-50%);
  }
  .sldnxt {
    position: absolute;
    right: 1em;
    top: 50%;
    transform: translateY(-50%);
  }
  .sldprv:hover, .sldnxt:hover {
    opacity: 0.7;
    cursor: pointer;
  }

  /*====================
    Accordion Styling
  =====================*/

.accordion {
    margin: 0 auto;
    width: 1000px;
    text-align: center;
}

.info-content {
  width:800px;
  overflow:hidden;
  padding: 1em;
  box-sizing: border-box;
}


.item {
    color: white;
    font-family: "Bebas Neue", sans-serif;
    font-size: 36px;
    width:50px;
    float: left;
    background-color: #950000;
    border: 1px solid #7f8c8d;
    height: 850px;
    line-height: 50px;
    cursor: pointer;
    writing-mode: vertical-lr;
    text-align:left;
    padding-top:20px;
    box-sizing: border-box;

}

.active-accordion {
    background-color: #BE0000;
}

.info {
    text-align:left;
    width: 0;
    float: left;
    background-color: #FEEEEE;
    color: #950000;
    height: 850px;
    display: none;
    font-family: lato, sans-serif;
    box-sizing: border-box;
}

.header-block {
  float:left;
  margin: 1em;
  margin-bottom: 0;
}

.hb-header {
  width: 200px;
  height: 50px;
  text-align: center;
  background-color: #BE0000;
  line-height: 50px;
  font-family: 'Bebas Neue', sans-serif;
  color: white;
  font-size: 35px;
}

.hb-subheader {
  padding: 4px 0;
  width:200px;
  margin-top: 3px;
  text-align: center;
  line-height: 22px;
  background-color: #950000;
  color: white;
  font-size: 22px;
  font-family: 'Bebas Neue', sans-serif;
}

/*====================
  Footer Styling
=====================*/

.footer {
  background-color: #93040B;
  height: 12em;
}

#contact {
  margin: 1em auto 0 auto;
}

.footer h3 {
  color:white;
  text-align: center;
  font-family: 'Bebas Neue', sans-serif;
  font-size: 36px;
  padding-top: 0.5em;
  margin-bottom: 0.5em;
}

.footer .red_box {
  margin-top: 1em;
}

.footer .red_box:hover {
}


.white-bar {
  height: 2px;
  width: 25em;
  background-color: white;
  margin: 0 auto;

}

